syntax="proto3";
option go_package="msg/cmsg";

message ReqLogin{
    string token = 1;
}

message RespLogin{
    enum Error{
        Invalid = 0;
        RPCError = 1;
    }
    Error err = 1;
    uint64 userID = 2;
    string token = 3;
}

message ReqMatch{
    string nickname = 1;
}

message RespMatch{
    enum Error{
        Invalid = 0;
        UserNotExisted =1;
        AlreadyInGame = 2;
    }
    Error err = 1;
    string nickname = 2;
}

message SNotifyGameReady{
    string gameAddr = 1; //游戏服务器连接地址
}

message ReqGameLogin{
    uint64 userId = 1;
    string nickname = 2;
}

message RespGameLogin{
    enum Error{
        Invalid = 0;
        GameNotExist = 1;
    }
    Error err = 1;
}

message ReqClientReady{

}

message RespClientReady{
    enum Error{
        Invalid = 0;
        GameNotExist = 1;
    }
    Error err = 1;
}

message SNotifyGameStart{
    int64 randSeed = 1;
    repeated Seat seats = 2;
}

message Seat{
    int32 seatId = 1;
    uint64 userId = 2;
    string nickname = 3;
}

message ReqGameInput{
    Input input = 1;
}

message Input{
    enum Type{
        None = 0;
        Move = 1;
        Shoot = 2;
    }

    Type type = 1;
    float pressTime = 2;
    float targetRotation = 3;
}

message SSyncFrame{
    uint32 frame = 1;//帧号
    repeated SeatInput inputs = 2;

    string debug = 3;//显示信息(debug用）
}

message SeatInput{
    int32 seat = 1;
    Input input = 2;
}

message ReqGameOver{

}

message SNotifyGameOver{
    int32 overReason = 1;
}

//通知被T出
message SNoticeKickOut{
    enum Reason{
        Invalid = 0;
        Relogin = 1;//重复登录被T出
    }
    Reason reason = 1;
}


